--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,9 +18,19 @@
     --foreground: #ededed;
   }
 }
+@font-face {
+  font-family: "Sporting Grotesque";
+  src: url("/fonts/SportingGrotesque-Regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
 
+@font-face {
+  font-family: "Sporting Grotesque";
+  src: url("/fonts/SportingGrotesque-Bold.otf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+}
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Sporting grotesque", sans-serif;
 }
