added why choose me section and desktop responsive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,10 @@
 body {
   font-family: "Sporting grotesque", sans-serif;
 }
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
