--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,3 +41,10 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+/* globals.css */
+html.dark {
+  background-color: #000;
+  color: #fff;
+}
+
+@custom-variant dark (&:where(.dark, .dark *));
